# bitvm2-covenant

./: Cargo.toml
covenant-lib/: Cargo.toml
covenant-lib/src/: lib.rs
guest/: Cargo.toml
guest-std/: Cargo.toml
guest-std/src/: main.rs
guest/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
test-vectors/: 3168249.json
