[package]
name = "covenant-lib"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
revm = { git = "https://github.com/zkMIPS/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
#revm = { path = "../../revm/crates/revm", default-features = false, features = [ "serde" ] } 
models = { git = "https://github.com/zkMIPS/revme", package = "models" }
#models = { path = "../../revme/models" } 
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false }

k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2" , features = ["extra_traits"] }
hex = "0.4.3"
