[workspace]
[package]
name = "bitvm2-covenant"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false }

k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2" , features = ["extra_traits"] }
covenant-lib = { path = "../covenant-lib" }
