[workspace]
[package]
name = "bitvm2-covenant"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
revm = { git = "https://github.com/zkMIPS/revm", branch = "zkm2", default-features = false, features = [ "serde", "optional_no_base_fee", "optional_balance_check" ] }
models = { git = "https://github.com/zkMIPS/revme", package = "models" }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false }

k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2" , features = ["extra_traits"] }
zkm2-zkvm = { git = "https://github.com/zkMIPS/zkm2", branch = "dev/init", package = "zkm2-zkvm" }
# zkm2-zkvm = { path = "../../zkm2/crates/zkvm/entrypoint" }

covenant-lib = { path = "../covenant-lib" }
