[package]
name = "bitvm2-covenant-host"
version.workspace = true
edition.workspace = true

[dependencies]
zkm2-sdk = { workspace = true }
zkm2-prover = { workspace = true }
zkm2-verifier = { workspace = true }
hex = { workspace = true }
ark-bn254 = { version = "0.5" }
ark-groth16 = { version = "0.5" }
models = { git = "https://github.com/zkMIPS/revme", package = "models", branch = "deserialize" }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false }

[build-dependencies]
zkm2-build = { workspace = true }
